[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ui/GUI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://scenes/ui/Anton/Anton-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://scenes/ui/Anton/Anton-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://scenes/ui/Anton/Anton-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://scenes/ui/Anton/Anton-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = SubResource( 9 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TitleScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.521569, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -323.5
margin_top = -49.0
margin_right = 323.5
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Tank Commander William"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -292.0
margin_right = 128.0
margin_bottom = -200.0
custom_fonts/font = SubResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.521569, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -323.5
margin_top = -49.0
margin_right = 323.5
margin_bottom = 49.0
custom_fonts/font = SubResource( 8 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.5
margin_top = -292.0
margin_right = 149.5
margin_bottom = -200.0
custom_fonts/font = SubResource( 10 )
text = "Play again?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TitleScreen/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="GameOverScreen/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
